# reboundx

./: .gitignore  .readthedocs.yml  .travis.yml  Dockerfile  MANIFEST.in  Makefile  README.rst  changelog.md  install_test.sh  pyproject.toml  requirements.txt  setup.py  update_version.py  version.txt
cext/: Makefile  libreboundxf.c  libreboundxf.h  modify_elements_direct.c  modify_elements_forces.c  xftools.c  xftools.h
doc/: Makefile  add_effect.rst  c_api.rst  c_quickstart.rst  c_version.rst  collisions.rst  conf.py  cversion.rst  effect_headers.txt  effects.rst  faq.rst  getters.rst  index.rst  ipython_examples.rst  misc.rst  modules.rst  params.rst  python_api.rst  python_quickstart.rst  python_version.rst  requirements.txt
dt_testing/: Chaotic Migration Example.ipynb  Chaotic Migration Kozai.ipynb  Chaotic Tide Map.ipynb  Chaotic Tides TRACE.ipynb  TIC system comparison.ipynb  high eccentricity migration.ipynb
examples/: Makefile  exp_mig_example_c.c
ipython_examples/: ArrayParameters.ipynb  CentralForce.ipynb  ChaoticTidalMigration.ipynb  ChaoticTidalMigrationKozai.ipynb  CompositionTracking.ipynb  CustomSplittingIntegrationSchemes.ipynb  Custom_Effects.ipynb  EccAndIncDamping.ipynb  ExponentialMigration.ipynb  FragmentingCollisions.ipynb  FragmentingCollisions.py  GasDampingForces.ipynb  GasDampingTimescale.ipynb  GasDynamicalFriction.ipynb  GeneralRelativity.ipynb  GettingStartedParameters.ipynb  InnerDiskEdge.ipynb  IntegrateForce.ipynb  Introduction.ipynb  J2.ipynb  LT.ipynb  LenseThirring.ipynb  MassEvolution.ipynb  MesaReader.ipynb  Migration.ipynb  ModifyMass.ipynb  Neptune_migration_exp.ipynb  ObliquityEvolution.ipynb  OperatorsOverview.ipynb  ParameterInterpolation-MesaReader.ipynb  ParameterInterpolation-SimpleText.ipynb  ParameterInterpolation.ipynb  Parameters.ipynb  Phoebe.ipynb  RadialForce.ipynb  Radiation_Forces_Circumplanetary_Dust.ipynb  Radiation_Forces_Debris_Disk.ipynb  SavingAndLoadingSimulations.ipynb  SelfConsistentSpinTidalDynamicalPseudoSynchronization.ipynb  Self_Consistent_Spin_Tidal_Dynamical_Pseudo_Synchronization.ipynb  (+32 more)
problems/: 4p.ipynb  dissipationcomparetoIAS15.ipynb  dissipationcomparison.ipynb  dissipationtests.ipynb  longtermintegratorcomparison.py  newslimplectic.ipynb  plotlongtermintegratorcomparison.ipynb  (+2 more)
(+444 files in other folders)
