[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
skip = "cp36*"
manylinux-x86_64-image = "manylinux2014"

[tool.cibuildwheel.macos]
repair-wheel-command = """\
delocate-wheel \
--require-archs {delocate_archs} -w {dest_dir} -v {wheel} --ignore-missing-dependencies\
"""

[tool.cibuildwheel.linux]
archs = ["x86_64"]
before-build = "pip install auditwheel"
repair-wheel-command = "LD_LIBRARY_PATH=/usr/lib64 auditwheel repair -w {dest_dir} {wheel} --exclude librebound.cpython-37m-x86_64-linux-gnu.so --exclude librebound.cpython-39-x86_64-linux-gnu.so --exclude librebound.cpython-310-x86_64-linux-gnu.so --exclude librebound.cpython-311-x86_64-linux-gnu.so --exclude librebound.cpython-312-x86_64-linux-gnu.so"
